Now sends many chunks and not just one